force-app/main/default/objects/QuoteBoilerplate__c/QuoteBoilerplate__c.object-meta.xml
<CustomObject>
    <description>Contains text blocks used in quote PDF&apos;s. These are organized by Corning Selling Entity and Language.</description>
    <label>Quote Boilerplate</label>
    <nameField>
        <label>Quote Boilerplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Boilerplate</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>