force-app/main/default/objects/QuoteBoilerplate__c/fields/concoreRemarks__c.field-meta.xml
<CustomField>
    <fullName>concoreRemarks__c</fullName>
    <label>Remarks (Concore)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>