force-app/main/default/objects/QuoteBoilerplate__c/fields/corningSellingEntity__c.field-meta.xml
<CustomField>
    <fullName>corningSellingEntity__c</fullName>
    <description>Corning Ceramic Materials (Shanghai) Co. vs Corning Specialty Materials Incorporated</description>
    <inlineHelpText>Corning Ceramic Materials (Shanghai) Co. vs Corning Specialty Materials Incorporated</inlineHelpText>
    <label>Corning Selling Entity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCMS</fullName>
            </value>
            <value>
                <fullName>CSMI</fullName>
            </value>
            <value>
                <fullName>CIKK</fullName>
            </value>
            <value>
                <fullName>CVCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>