force-app/main/default/objects/QuoteBoilerplate__c/fields/corningSellingEntityLabel__c.field-meta.xml
<CustomField>
    <fullName>corningSellingEntityLabel__c</fullName>
    <label>Corning Selling Entity Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>