force-app/main/default/objects/QuoteBoilerplate__c/fields/partsRemarks__c.field-meta.xml
<CustomField>
    <fullName>partsRemarks__c</fullName>
    <label>Remarks (Parts)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>