force-app/main/default/objects/QuoteBoilerplate__c/fields/preparedBy__c.field-meta.xml
<CustomField>
    <fullName>preparedBy__c</fullName>
    <label>Prepared By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>