force-app/main/default/objects/QuoteBoilerplate__c/fields/preparedFor__c.field-meta.xml
<CustomField>
    <fullName>preparedFor__c</fullName>
    <label>Prepared For</label>
    <length>40</length>
    <type>Text</type>
</CustomField>