force-app/main/default/objects/QuoteBoilerplate__c/fields/quoteLanguage__c.field-meta.xml
<CustomField>
    <fullName>quoteLanguage__c</fullName>
    <label>Quote Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>quoteLanguage</valueSetName>
    </valueSet>
</CustomField>