force-app/main/default/objects/QuoteBoilerplate__c/fields/rawRemarks__c.field-meta.xml
<CustomField>
    <fullName>rawRemarks__c</fullName>
    <label>Remarks (Raw Glass)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>