force-app/main/default/objects/QuoteBoilerplate__c/fields/returnAddress__c.field-meta.xml
<CustomField>
    <fullName>returnAddress__c</fullName>
    <label>Return Address</label>
    <type>TextArea</type>
</CustomField>