force-app/main/default/objects/QuoteBoilerplate__c/fields/termsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>termsAndConditions__c</fullName>
    <label>Terms and Conditions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>