force-app/main/default/objects/QuoteBoilerplate__c/fields/thankYou1__c.field-meta.xml
<CustomField>
    <fullName>thankYou1__c</fullName>
    <label>Thank You 1</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>