force-app/main/default/objects/QuoteBoilerplate__c/fields/thankYou2__c.field-meta.xml
<CustomField>
    <fullName>thankYou2__c</fullName>
    <label>Thank You 2</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>