force-app/main/default/objects/QuoteBoilerplate__c/fields/thankYou__c.field-meta.xml
<CustomField>
    <fullName>thankYou__c</fullName>
    <label>Thank You</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>